# mcp-server

./: README.md  SECURITY.md  cli.py  config.py  pyproject.toml  server.py  test_server.py  test_tools.py
.github/workflows/: daily_check.yml  tests.yml  upgrade-uv-lock.yml
nebius_mcp_server/: cli.py  config.py  main.py  server.py
tests/: test_server.py  test_tools.py
