[project]
name = "nebius-mcp-server"
dynamic = ["version"]
description = "Nebius Model Context Protocol Server"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Ivan Kornilov" }]
dependencies = [
    "fastmcp>=2.0.0,<=2.11.1",
    "mcp[cli]>=1.0.0,<=1.16.0",
]

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-repeat>=0.9.4",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nebius_mcp_server*"]

[project.scripts]
nebius-mcp-server = "nebius_mcp_server.main:main"
